# AbRank-WALLE-Affinity

./: .env_template  .gitignore  .project-root  Makefile  README.md  pyproject.toml
conda-env/: waffle-gpu.yaml
waffle/: .gitignore  constants.py  train-abrank-ranking.py  train-abrank-regression.py
waffle/config/: train-abrank-regression.yaml  train-abrank.yaml
waffle/config/callbacks/: default.yaml  early_stopping.yaml  ema.yaml  learning_rate_monitor.yaml  model_checkpoint.yaml  model_summary.yaml  rich_progress_bar.yaml  stop_on_nan.yaml
waffle/config/dataset/: AbRank-regression.yaml  AbRank.yaml
waffle/config/encoder/: walle.yaml
waffle/config/env/: default.yaml
waffle/config/hydra/: default.yaml
waffle/config/logger/: wandb.yaml
waffle/config/optimizer/: adamw.yaml
waffle/config/regressor/: default.yaml
waffle/config/scheduler/: linear_warmup_cosine_decay.yaml
waffle/config/trainer/: default.yaml
waffle/data/: abrank_datamodule.py  abrank_regression_datamodule.py
waffle/data/components/: abrank_dataset.py  abrank_dataset_regression.py  pair_data.py
waffle/models/: abrank_ranking_gcn.py  abrank_regression_gcn.py  regression_gcn.py  regression_gcn_legacy.py
waffle/models/components/: graph_regressor.py
waffle/scripts/: validate_downloads.py
waffle/utils/: __init__.py  callbacks.py  extras.py  file_validation.py  utils.py  wandb_helper.py
